--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "skr-spa",
 	"version": "0.0.0",
 	"scripts": {
-		"dev": "vite --mode development --port 3030",
+		"dev": "vite --mode development",
 		"prd": "vite --mode production",
 		"build": "vite build --mode production",
 		"preview": "vite preview",
@@ -22,6 +22,7 @@
 		"lodash-es": "^4.17.21",
 		"moment": "^2.29.1",
 		"react": "^17.0.2",
+		"react-activation": "^0.9.9",
 		"react-data-grid": "^7.0.0-beta.8",
 		"react-dom": "^17.0.2",
 		"react-helmet": "^6.1.0",
@@ -36,6 +37,7 @@
 	},
 	"devDependencies": {
 		"@babel/core": "^7.17.0",
+		"@hookform/devtools": "^4.0.2",
 		"@storybook/addon-actions": "^6.5.0-alpha.36",
 		"@storybook/addon-essentials": "^6.5.0-alpha.36",
 		"@storybook/addon-interactions": "^6.5.0-alpha.36",
@@ -71,6 +73,7 @@
 		"typescript": "^4.4.4",
 		"vite": "^2.7.2",
 		"vite-plugin-babel-import": "^2.0.5",
+		"vite-plugin-checker": "^0.4.2",
 		"vite-plugin-eslint": "^1.3.0",
 		"vite-tsconfig-paths": "^3.3.17"
 	}
