--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
 		"@hookform/error-message": "^2.0.0",
 		"@hookform/resolvers": "^2.8.8",
 		"@loadable/component": "^5.15.2",
+		"@mui/material": "^5.5.1",
 		"@reduxjs/toolkit": "^1.7.1",
 		"antd": "^4.18.5",
 		"axios": "^0.25.0",
+		"chart.js": "^3.7.1",
+		"chroma-js": "^2.4.2",
 		"jspdf": "^2.5.1",
 		"jspdf-autotable": "^3.5.23",
 		"lodash-es": "^4.17.21",
@@ -32,6 +35,7 @@
 		"redux-logger": "^3.0.6",
 		"redux-persist": "^6.0.0",
 		"styled-components": "^5.3.3",
+		"stylis-plugin-rtl": "^2.1.1",
 		"xlsx": "^0.18.0",
 		"yup": "^0.32.11"
 	},
@@ -47,6 +51,7 @@
 		"@storybook/react": "^6.5.0-alpha.36",
 		"@storybook/testing-library": "^0.0.9",
 		"@types/babel-core": "^6.25.7",
+		"@types/chroma-js": "^2.1.3",
 		"@types/loadable__component": "^5.13.4",
 		"@types/lodash-es": "^4.17.5",
 		"@types/node": "^17.0.14",
