--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
 		"@hookform/error-message": "^2.0.0",
 		"@hookform/resolvers": "^2.8.8",
 		"@loadable/component": "^5.15.2",
+		"@mui/icons-material": "^5.5.1",
+		"@mui/lab": "^5.0.0-alpha.73",
 		"@mui/material": "^5.5.1",
+		"@mui/styles": "^5.5.1",
 		"@reduxjs/toolkit": "^1.7.1",
 		"antd": "^4.18.5",
 		"axios": "^0.25.0",
@@ -26,9 +29,11 @@
 		"moment": "^2.29.1",
 		"react": "^17.0.2",
 		"react-activation": "^0.9.9",
+		"react-custom-scrollbars-2": "^4.4.0",
 		"react-data-grid": "^7.0.0-beta.8",
 		"react-dom": "^17.0.2",
 		"react-helmet": "^6.1.0",
+		"react-helmet-async": "^1.2.3",
 		"react-hook-form": "^7.25.3",
 		"react-redux": "^7.2.6",
 		"react-router-dom": "^6.2.1",
