--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
 		"jspdf-autotable": "^3.5.23",
 		"lodash-es": "^4.17.21",
 		"moment": "^2.29.1",
+		"nprogress": "^0.2.0",
+		"numeral": "^2.0.6",
 		"react": "^17.0.2",
 		"react-activation": "^0.9.9",
+		"react-chartjs-2": "^4.0.1",
 		"react-custom-scrollbars-2": "^4.4.0",
 		"react-data-grid": "^7.0.0-beta.8",
 		"react-dom": "^17.0.2",
@@ -60,6 +63,8 @@
 		"@types/loadable__component": "^5.13.4",
 		"@types/lodash-es": "^4.17.5",
 		"@types/node": "^17.0.14",
+		"@types/nprogress": "^0.2.0",
+		"@types/numeral": "^2.0.2",
 		"@types/react": "^17.0.33",
 		"@types/react-dom": "^17.0.10",
 		"@types/react-helmet": "^6.1.5",
