--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@mui/lab": "^5.0.0-alpha.73",
 		"@mui/material": "^5.5.1",
 		"@mui/styles": "^5.5.1",
+		"@mui/x-data-grid": "^5.7.0",
 		"@reduxjs/toolkit": "^1.7.1",
 		"antd": "^4.18.5",
 		"axios": "^0.25.0",
@@ -35,7 +36,6 @@
 		"react-custom-scrollbars-2": "^4.4.0",
 		"react-data-grid": "^7.0.0-beta.8",
 		"react-dom": "^17.0.2",
-		"react-helmet": "^6.1.0",
 		"react-helmet-async": "^1.2.3",
 		"react-hook-form": "^7.25.3",
 		"react-redux": "^7.2.6",
