--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,7 +32,7 @@
 		"**/bower_components": true,
 		"**/build": true,
 		"**/coverage": true,
-		"**/node_modules": true,
+		// "**/node_modules": true,
 		"**/Pods": true,
 		"**/tmp": true
 	},
