--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"axios": "^0.25.0",
 		"chart.js": "^3.7.1",
 		"chroma-js": "^2.4.2",
+		"date-fns": "^2.28.0",
 		"jspdf": "^2.5.1",
 		"jspdf-autotable": "^3.5.23",
 		"lodash-es": "^4.17.21",
@@ -35,6 +36,7 @@
 		"react-custom-scrollbars-2": "^4.4.0",
 		"react-data-grid": "^7.0.0-beta.8",
 		"react-dom": "^17.0.2",
+		"react-error-boundary": "^3.1.4",
 		"react-helmet-async": "^1.2.3",
 		"react-hook-form": "^7.25.3",
 		"react-redux": "^7.2.6",
