--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -2,6 +2,7 @@
 	"compilerOptions": {
 		"baseUrl": "./",
 		"paths": {
+			"@root/*": ["src/*"],
 			"@components/*": ["src/components/*"],
 			"@styles/*": ["src/shared/styles/*"],
 			"@story/*": ["src/stories/*"],
