--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"jspdf-autotable": "^3.5.23",
 		"lodash-es": "^4.17.21",
 		"moment": "^2.29.1",
+		"notistack": "^2.0.4",
 		"nprogress": "^0.2.0",
 		"numeral": "^2.0.6",
 		"react": "^17.0.2",
