--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"react": "^17.0.2",
 		"react-activation": "^0.9.9",
 		"react-chartjs-2": "^4.0.1",
+		"react-collate": "^1.0.1",
 		"react-custom-scrollbars-2": "^4.4.0",
 		"react-data-grid": "^7.0.0-beta.8",
 		"react-dom": "^17.0.2",
