--- a/.env.development
+++ b/.env.development
@@ -1,7 +1,7 @@
 # 개발 환경변수 설정 (prifix: VITE_)
 
 ## REST API URL
-VITE_PUBLIC_API_URL=http://localhost:3000
+VITE_PUBLIC_API_URL=https://api.instantwebtools.net/v1
 
 ## PORT
 VITE_PORT=5050
