--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@mui/material": "^5.5.1",
 		"@mui/styles": "^5.5.1",
 		"@mui/x-data-grid": "^5.7.0",
+		"@mui/x-data-grid-pro": "^5.9.0",
 		"@reduxjs/toolkit": "^1.7.1",
 		"axios": "^0.25.0",
 		"chart.js": "^3.7.1",
