--- a/.env.development
+++ b/.env.development
@@ -3,5 +3,8 @@
 ## REST API URL
 VITE_PUBLIC_API_URL=https://api.instantwebtools.net/v1
 
+# API PROXY replce key
+VITE_API_REPLACE_KEY=/skr/evpark
+
 ## PORT
 VITE_PORT=5050
