--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,7 @@
 # 운영 환경변수 설정 (prifix: VITE_)
 
 ## REST API URL
-VITE_PUBLIC_API_URL=http://localhost:3000
+VITE_PUBLIC_API_URL=/
+
+# API PROXY replce key
+VITE_API_REPLACE_KEY=/skr/evpark
