--- a/package.json
+++ b/package.json
@@ -95,5 +95,6 @@
 		"vite-plugin-checker": "^0.4.2",
 		"vite-plugin-eslint": "^1.3.0",
 		"vite-tsconfig-paths": "^3.3.17"
-	}
+	},
+	"packageManager": "yarn@1.22.10"
 }
