--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
 		"notistack": "^2.0.4",
 		"nprogress": "^0.2.0",
 		"numeral": "^2.0.6",
-		"react": "^17.0.2",
+		"react": "^18.1.0",
 		"react-activation": "^0.9.9",
 		"react-chartjs-2": "^4.0.1",
 		"react-collate": "^1.0.1",
@@ -71,9 +71,10 @@
 		"@types/node": "^17.0.14",
 		"@types/nprogress": "^0.2.0",
 		"@types/numeral": "^2.0.2",
-		"@types/react": "^17.0.33",
+		"@types/react": "^18.0.9",
 		"@types/react-dom": "^17.0.10",
 		"@types/react-helmet": "^6.1.5",
+		"@types/react-redux": "7.1.23",
 		"@types/redux-logger": "^3.0.9",
 		"@types/styled-components": "^5.1.21",
 		"@typescript-eslint/eslint-plugin": "^5.10.2",
@@ -99,6 +100,10 @@
 		"vite-plugin-eslint": "^1.3.0",
 		"vite-plugin-mkcert": "^1.6.0",
 		"vite-tsconfig-paths": "^3.3.17"
+	},
+	"resolutions": {
+		"@types/react": "^18.0.9",
+		"@types/react-redux": "^7.1.23"
 	},
 	"packageManager": "yarn@1.22.10"
 }
