--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 		"@mui/icons-material": "^5.5.1",
 		"@mui/lab": "^5.0.0-alpha.73",
 		"@mui/material": "^5.5.1",
-		"@mui/styles": "^5.5.1",
+		"@mui/styles": "^5.7.0",
 		"@mui/x-data-grid": "^5.7.0",
 		"@mui/x-data-grid-pro": "^5.9.0",
 		"@reduxjs/toolkit": "^1.7.1",
@@ -32,7 +32,7 @@
 		"notistack": "^2.0.4",
 		"nprogress": "^0.2.0",
 		"numeral": "^2.0.6",
-		"react": "^18.1.0",
+		"react": "17.0.2",
 		"react-activation": "^0.9.9",
 		"react-chartjs-2": "^4.0.1",
 		"react-collate": "^1.0.1",
@@ -71,10 +71,9 @@
 		"@types/node": "^17.0.14",
 		"@types/nprogress": "^0.2.0",
 		"@types/numeral": "^2.0.2",
-		"@types/react": "^18.0.9",
+		"@types/react": "17.0.33",
 		"@types/react-dom": "^17.0.10",
 		"@types/react-helmet": "^6.1.5",
-		"@types/react-redux": "7.1.23",
 		"@types/redux-logger": "^3.0.9",
 		"@types/styled-components": "^5.1.21",
 		"@typescript-eslint/eslint-plugin": "^5.10.2",
@@ -102,8 +101,8 @@
 		"vite-tsconfig-paths": "^3.3.17"
 	},
 	"resolutions": {
-		"@types/react": "^18.0.9",
-		"@types/react-redux": "^7.1.23"
+		"react": "17.0.2",
+		"@types/react": "17.0.33"
 	},
 	"packageManager": "yarn@1.22.10"
 }
