--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,8 +25,9 @@
 		"noImplicitAny": true,
 		"strictNullChecks": true,
 		"noFallthroughCasesInSwitch": true,
-		"baseUrl": "./"
+		"baseUrl": "./",
+		"types": ["./@types"]
 	},
-	"include": ["./src", "./@types"],
+	"include": ["./src", "./@types/index.d.ts"],
 	"exclude": ["node_modules"]
 }
