--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 		"react-hook-form": "^7.25.3",
 		"react-redux": "^7.2.6",
 		"react-router-dom": "^6.2.1",
+		"react-syntax-highlighter": "^15.5.0",
 		"redux-logger": "^3.0.6",
 		"redux-persist": "^6.0.0",
 		"styled-components": "^5.3.3",
@@ -88,6 +89,7 @@
 		"eslint-plugin-react": "^7.28.0",
 		"eslint-plugin-storybook": "^0.5.6",
 		"prettier": "^2.5.1",
+		"react-element-to-jsx-string": "^15.0.0",
 		"rollup-plugin-visualizer": "^5.5.4",
 		"storybook-builder-vite": "^0.1.15",
 		"ts-node": "^10.4.0",
