--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
 		"build-storybook": "build-storybook"
 	},
 	"dependencies": {
-		"@faker-js/faker": "^6.0.0-alpha.5",
 		"@hookform/error-message": "^2.0.0",
 		"@hookform/resolvers": "^2.8.8",
 		"@loadable/component": "^5.15.2",
@@ -25,19 +24,14 @@
 		"chart.js": "^3.7.1",
 		"chroma-js": "^2.4.2",
 		"date-fns": "^2.28.0",
-		"jspdf": "^2.5.1",
-		"jspdf-autotable": "^3.5.23",
+		"dayjs": "^1.11.2",
 		"lodash-es": "^4.17.21",
-		"moment": "^2.29.1",
 		"notistack": "^2.0.4",
 		"nprogress": "^0.2.0",
-		"numeral": "^2.0.6",
 		"react": "17.0.2",
 		"react-activation": "^0.9.9",
-		"react-chartjs-2": "^4.0.1",
 		"react-collate": "^1.0.1",
 		"react-custom-scrollbars-2": "^4.4.0",
-		"react-data-grid": "^7.0.0-beta.8",
 		"react-dom": "^17.0.2",
 		"react-error-boundary": "^3.1.4",
 		"react-helmet-async": "^1.2.3",
@@ -47,14 +41,11 @@
 		"react-syntax-highlighter": "^15.5.0",
 		"redux-logger": "^3.0.6",
 		"redux-persist": "^6.0.0",
-		"styled-components": "^5.3.3",
-		"stylis-plugin-rtl": "^2.1.1",
-		"vite-plugin-svgr": "^2.1.0",
-		"xlsx": "^0.18.0",
 		"yup": "^0.32.11"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.17.0",
+		"@faker-js/faker": "^6.3.1",
 		"@hookform/devtools": "^4.0.2",
 		"@mui/x-data-grid-generator": "^5.10.0",
 		"@storybook/addon-actions": "^6.5.0-alpha.36",
@@ -80,7 +71,6 @@
 		"@typescript-eslint/eslint-plugin": "^5.10.2",
 		"@vitejs/plugin-legacy": "^1.6.4",
 		"@vitejs/plugin-react": "^1.0.7",
-		"babel-loader": "^8.2.3",
 		"cross-env": "^7.0.3",
 		"eslint": "^8.15.0",
 		"eslint-config-prettier": "^8.3.0",
@@ -100,6 +90,7 @@
 		"vite-plugin-checker": "^0.4.2",
 		"vite-plugin-eslint": "^1.3.0",
 		"vite-plugin-mkcert": "^1.6.0",
+		"vite-plugin-svgr": "^2.1.0",
 		"vite-tsconfig-paths": "^3.3.17"
 	},
 	"resolutions": {
