--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"preview": "vite preview",
 		"storybook": "start-storybook -p 6006",
 		"build-storybook": "build-storybook",
+		"deploy:storybook": "chromatic --project-token=155be2d66a60",
 		"prettier:fix": "prettier --write"
 	},
 	"dependencies": {
@@ -68,6 +69,7 @@
 		"@typescript-eslint/eslint-plugin": "^5.10.2",
 		"@vitejs/plugin-legacy": "^1.6.4",
 		"@vitejs/plugin-react": "^1.0.7",
+		"chromatic": "^6.5.4",
 		"cross-env": "^7.0.3",
 		"eslint": "^8.15.0",
 		"eslint-config-prettier": "^8.3.0",
