--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,6 @@
 		"baseUrl": "./",
 		"types": ["./@types"]
 	},
-	"include": ["./src", "./@types/index.d.ts"],
+	"include": ["./src"],
 	"exclude": ["node_modules"]
 }
